--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,37 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 60px;
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.home {
+    background: url('https://www.travelandleisure.com/thmb/2RARACU9HQ3ieLg_CCJhxDnh9Q8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/TAL-spacex-space-station-SPACEX0523-48e8ab4f27fd403ebd0ea15d0375f827.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+}
+
+@media only screen and (max-width: 1140px) {
+  .home {
+      height: 110vh;
+      background-position: center;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 900px) {
+  h1 {
+    font-size: 40px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .navtabs-wrapper a {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar {
+    align-items: center;
   }
 }
