--- a/src/components/rockets/rockets.css
+++ b/src/components/rockets/rockets.css
@@ -1,45 +1,46 @@
 .rockets-wrapper {
-    width: 70%;
+    width: 90%;
+    max-width: 1000px;
     margin: 20px auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
 }
 
 .rockets-item {
-    width: 50%;
-    display: flex;
-    justify-content: center;
     text-align: left;
-    margin: 20px 0;
-}
-
-.rockets-article {
+    color: white;
+    text-decoration: none;
     background-color: rgb(24, 23, 23);
-    width: 450px;
+    transition: ease-in-out .3s;
 }
 
-.rockets-article h2 {
+.rockets-item:hover {
+    transform: scale(1.03);
+}
+
+.rockets-item h2 {
     padding: 20px 0 10px 20px;
 }
 
-.rockets-article p {
+.rockets-item p {
     padding: 0 20px 20px 20px;
     opacity: 0.8;
 }
 
-.rockets-item a {
-    color: white;
-    text-decoration: none;
+.rockets-img-wrapper {
+    height: 330px;
 }
 
 .rockets-item img {
-    width: 450px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .single-rocket-wrapper {
-    width: 70%;
+    width: 80%;
+    max-width: 1000px;
     margin: 50px auto;
     display: flex;
     justify-content: center;
@@ -73,7 +74,7 @@
 }
 
 .img-wrapper img {
-    width: 100%;
+    max-width: 100%;
     margin-left: 20px;
 }
 
@@ -100,19 +101,24 @@
 
 @media only screen and (max-width: 800px) {
     .rockets-wrapper {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
+        width: 80%;
+        grid-template-columns: 1fr;
     }
 
     .single-rocket-wrapper {
         width: 100%;
         flex-direction: column;
-        padding: 10px;
+        padding: 0 20px;
     }
 
     .single-rocket-info {
         width: 100%;
+    }
+
+    .left-right-wrapper {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 10px;
     }
 
     .img-wrapper {
@@ -122,20 +128,5 @@
 
     .img-wrapper img {
         margin-left: 0;
-    }
-}
-
-@media only screen and (min-width: 801px) and (max-width: 1288px) {
-    .rockets-wrapper {
-        width: 100%;
-    }
-    
-    .rockets-item img {
-        width: 350px;
-        height: 200px;
-    }
-
-    .rockets-article {
-        width: 350px;
     }
 }
