--- a/src/components/ships/ships.css
+++ b/src/components/ships/ships.css
@@ -1,21 +1,20 @@
 .ships-wrapper {
     width: 80%;
-    margin: 20px auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    max-width: 1300px;
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
 .ships-item {
-    width: 30%;
     text-align: left;
-    margin: 20px 0;
+    background-color: rgb(24, 23, 23);
+    transition: ease-in-out .3s;
 }
 
-.ships-article {
-    background-color: rgb(24, 23, 23);
-    width: 100%;
+.ships-item:hover {
+    transform: scale(1.03);
 }
 
 .ships-article h2 {
@@ -47,10 +46,12 @@
 .ships-wrapper img {
     width: 100%;
     height: 250px;
+    object-fit: cover;
 }
 
 .single-ship-wrapper {
     width: 70%;
+    max-width: 1000px;
     margin: 50px auto;
     display: flex;
     justify-content: center;
@@ -103,25 +104,27 @@
     margin-left: 20px;
 }
 
+@media only screen and (max-width: 1000px) {
+    .ships-wrapper {
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .single-ship-wrapper {
+        width: 90%;
+    }
+}
+
 @media only screen and (max-width: 700px) {
     .ships-wrapper {
-        width: 100%;
-        flex-direction: column;
-    }
-
-    .ships-item {
-        width: 100%;
-        padding: 0 15px;
-    }
-
-    .ships-wrapper img {
-        height: 300px;
+        width: 80%;
+        grid-template-columns: 1fr;
     }
 
     .single-ship-wrapper {
         width: 100%;
         flex-direction: column;
-        padding: 0 10px;
+        padding: 0 20px;
     }
 
     .single-ship-info {
@@ -135,19 +138,5 @@
 
     .single-ship-img img {
         margin-left: 0;
-    }
-}
-
-@media only screen and (min-width: 700px) and (max-width: 1000px) {
-    .ships-wrapper {
-        width: 100%;
-    }
-    
-    .ships-item {
-        width: 45%;
-    }
-
-    .single-ship-wrapper {
-        width: 90%;
     }
 }
