--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -63,7 +63,7 @@
       max-height: 0;
     }
     100% {
-      max-height: 200px;
+      max-height: 400px;
     }
   }
 
@@ -82,8 +82,10 @@
   .navtabs-open a {
     color: white;
     text-decoration: none;
-    padding: 5px 0;
+    padding: 20px 0;
     border-bottom: 1px solid white;
     text-transform: uppercase;
+    font-size: 24px;
+    font-weight: 600;
   }
 }
