--- a/src/components/company/company.css
+++ b/src/components/company/company.css
@@ -13,16 +13,18 @@
     margin: 15px 0;
 }
 
-.company-wrapper p {
-    opacity: 0.8;
+.company-wrapper p, .company-wrapper a, .summary {
+    color: rgb(206, 201, 201);
 }
 
 .company-wrapper a {
     display: block;
     width: fit-content;
-    color: white;
     text-decoration: none;
-    opacity: 0.8;
+}
+
+.company-wrapper a:hover {
+    color: white;
 }
 
 .summary {
@@ -31,7 +33,6 @@
     text-align: center;
     margin: 0 auto;
     margin-top: 30px;
-    opacity: 0.9;
 }
 
 @media only screen and (max-width: 900px) {
