--- a/src/components/launches/launches.css
+++ b/src/components/launches/launches.css
@@ -29,7 +29,7 @@
 }
 
 .launches-item p {
-    opacity: 0.7;
+    color: rgb(206, 201, 201);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -51,9 +51,8 @@
     margin: 20px 0;
     display: block;
     text-decoration: none;
-    color: white;
-    border: 2px solid white;
-    opacity: 0.8;
+    border: 2px solid rgb(206, 201, 201);
+    color: rgb(206, 201, 201);
 }
 
 .single-launch {
@@ -67,16 +66,15 @@
 
 .single-launch p {
     margin-bottom: 10px;
-    opacity: 0.8;
+    color: rgb(206, 201, 201);
     font-size: 20px;
 }
 
 .single-launch button {
     border: none;
     font-size: 20px;
-    color: white;
     background-color: black;
-    opacity: 0.8;
+    color: rgb(206, 201, 201);
     cursor: pointer;
     margin-top: 30px;
 }
