--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -17,6 +17,7 @@
 .navtabs-wrapper a {
   color: white;
   text-decoration: none;
+  border-bottom: 2px solid transparent;
 }
 
 .navtabs-wrapper a:hover {
