--- a/src/components/rockets/rockets.css
+++ b/src/components/rockets/rockets.css
@@ -25,7 +25,7 @@
 
 .rockets-item p {
     padding: 0 20px 20px 20px;
-    opacity: 0.8;
+    color: rgb(206, 201, 201);
 }
 
 .rockets-img-wrapper {
@@ -66,7 +66,7 @@
 }
 
 .single-rocket-info p {
-    opacity: 0.8;
+    color: rgb(206, 201, 201);
 }
 
 .img-wrapper {
@@ -84,9 +84,8 @@
     margin: 20px 0;
     display: block;
     text-decoration: none;
-    color: white;
-    border: 2px solid white;
-    opacity: 0.8;
+    border: 2px solid rgb(206, 201, 201);
+    color: rgb(206, 201, 201);
 }
 
 .single-rocket-wrapper button {
@@ -94,7 +93,7 @@
     font-size: 20px;
     color: white;
     background-color: black;
-    opacity: 0.8;
+    color: rgb(206, 201, 201);
     cursor: pointer;
     margin-top: 10px;
 }
